@@ -2,6 +2,9 @@ May 20, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * macosx/main.m: Removed obsolete code, added const to function definations.
  * libpcsxcore/plugins.c: Added brackets around the use of CheckErr().
+ * libpcsxcore/psxcommon.h: Added brackets around gzfreeze().
+ * plugins/dfinput/Makefile.am: Use $(SDL_CFLAGS) and $(SDL_LIBS).
+ * plugins/dfsound/Makefile.am: Likewise.
 
 May 19, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
